--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -2035,13 +2035,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_text  = '''\n",
-    "\n",
-    "    第一階段：\n",
+    "第一階段：\n",
     "\n",
     "    好，各位電視機前面的朋友大家好。我是市長候選人登記第四號的柯文哲。\n",
     "\n",
@@ -2341,9 +2340,211 @@
     "    ，另外，我覺得我們會成功改建這些市場，還有一個就是信用（Credit )。\n",
     "    當年大龍市場，我們跟居民都還沒簽約，他們就搬出去了，他們相信政府應\n",
     "    該不會騙他們，所以願意搬出去。所以簡單來講，我們叫建立一個有信用的\n",
-    "    政府，如果我們真的有信用，老百姓會更相信我們，整個施政會更順利。 \n",
-    "'''"
+    "    政府，如果我們真的有信用，老百姓會更相信我們，整個施政會更順利。 '''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_text = ''.join(sample_text.split())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 方法一"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://raw.githubusercontent.com/tomlinNTUB/Machine-Learning/master/data/%E5%81%9C%E7%94%A8%E8%A9%9E-%E7%B9%81%E9%AB%94%E4%B8%AD%E6%96%87.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords = res.text.split('\\r\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "台灣 35\n",
+      "一個 25\n",
+      "問題 20\n",
+      "車禍 17\n",
+      "政府 16\n",
+      "政治 15\n",
+      "文化 12\n",
+      "成功 12\n",
+      "這種 11\n",
+      "知道 11\n",
+      "這是 10\n",
+      "社會 10\n",
+      "選舉 10\n",
+      "創新 10\n",
+      "制度 10\n",
+      "市場 10\n",
+      "改變 9\n",
+      "以前 9\n",
+      "坦白 9\n",
+      "耐煩 9\n",
+      "市長 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "from collections import Counter\n",
+    "c = Counter(list([w for w in jieba.cut(sample_text) if w not in stopwords]))\n",
+    "for w, cnt in c.most_common(30):\n",
+    "    if len(w) >= 2:\n",
+    "        print(w,cnt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 方法二"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_text = ''.join(sample_text.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentenceAry = re.split('，|《|》|。|「|？|；|、|\\（|\\)|：|」', sample_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keywords = []\n",
+    "frequent_words = []\n",
+    "for n in range(5,1,-1):\n",
+    "    words = []\n",
+    "    for sentence in sentenceAry:\n",
+    "        text_list = removeKey(sentence, keywords)\n",
+    "        words.extend(ngram(text_list, n))\n",
+    "        \n",
+    "    c = Counter(words)\n",
+    "    for w, cnt in c.items():\n",
+    "        if cnt >= 4:\n",
+    "            keywords.append(w)\n",
+    "            frequent_words.append((w,cnt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "swd = sorted(frequent_words, key = operator.itemgetter(1), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://raw.githubusercontent.com/tomlinNTUB/Machine-Learning/master/data/%E5%81%9C%E7%94%A8%E8%A9%9E-%E7%B9%81%E9%AB%94%E4%B8%AD%E6%96%87.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords = res.text.split('\\r\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "台灣 24\n",
+      "一個 22\n",
+      "問題 20\n",
+      "政府 16\n",
+      "所以我們 15\n",
+      "車禍 14\n",
+      "成功 12\n",
+      "創新 11\n",
+      "耐煩 11\n",
+      "市場 11\n",
+      "世大運 10\n",
+      "第一 10\n",
+      "文化 10\n",
+      "以前 10\n",
+      "制度 10\n",
+      "坦白講 9\n",
+      "市長 9\n",
+      "台北市 8\n",
+      "這是 8\n",
+      "超過 8\n",
+      "再來 8\n",
+      "社會 8\n",
+      "發現 8\n",
+      "公開透明 7\n",
+      "環南市場 7\n",
+      "候選人 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w, cnt in swd[0:50]:\n",
+    "    if w not in stopwords:\n",
+    "        print(w, cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
