--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -2497,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -2529,14 +2529,905 @@
       "發現 8\n",
       "公開透明 7\n",
       "環南市場 7\n",
-      "候選人 7\n"
+      "候選人 7\n",
+      "一次 7\n",
+      "現在 7\n",
+      "這種 7\n",
+      "政治 7\n",
+      "知道 7\n",
+      "務實 7\n",
+      "臺北市政府 6\n",
+      "我們台灣 6\n",
+      "外科醫生 6\n",
+      "仰德大道 6\n",
+      "發生車禍 6\n",
+      "還是有 6\n",
+      "年輕人 6\n",
+      "是這樣 6\n",
+      "公務員 6\n",
+      "還是要 6\n",
+      "選舉 6\n",
+      "相信 6\n",
+      "公布 6\n",
+      "有這 6\n",
+      "是要 6\n",
+      "開放 6\n",
+      "一定 6\n",
+      "去做 6\n",
+      "實在 6\n",
+      "意見 6\n",
+      "處理 6\n",
+      "一點 6\n",
+      "改建 6\n",
+      "我們還是要 5\n",
+      "2014 5\n",
+      "年的時候 5\n",
+      "我們還是 5\n",
+      "柯文哲 5\n",
+      "是台灣 5\n",
+      "台灣的 5\n",
+      "所以我 5\n",
+      "200 5\n",
+      "同樣的 5\n",
+      "是我們 5\n",
+      "也沒有 5\n",
+      "在這種 5\n",
+      "不同的 5\n",
+      "把人民 5\n",
+      "亡人數 5\n",
+      "我是 5\n",
+      "我的 5\n",
+      "是一 5\n",
+      "改變 5\n",
+      "整個 5\n",
+      "做起 5\n",
+      "是我 5\n",
+      "們就 5\n",
+      "是有 5\n",
+      "18 5\n",
+      "海選 5\n",
+      "能夠 5\n",
+      "是很 5\n",
+      "費用 5\n",
+      "辦法 5\n",
+      "他說 5\n",
+      "真的 5\n",
+      "會有 5\n",
+      "19 5\n",
+      "跟我 5\n",
+      "講說 5\n",
+      "已經 5\n",
+      "兩年 5\n",
+      "是說 5\n",
+      "機會 5\n",
+      "最大 5\n",
+      "的是 5\n",
+      "世界 5\n",
+      "建立 5\n",
+      "30 5\n",
+      "預算 5\n",
+      "一年 5\n",
+      "不來 5\n",
+      "今年 5\n",
+      "60 5\n",
+      "00 5\n",
+      "關係 5\n",
+      "尊重 5\n",
+      "現況 5\n",
+      "一天 5\n",
+      "解決 5\n",
+      "8年 5\n",
+      "開工 5\n",
+      "務實跟對話 4\n",
+      "交通改善計 4\n",
+      "通改善計畫 4\n",
+      "在201 4\n",
+      "社會運動 4\n",
+      "政治文化 4\n",
+      "如果我們 4\n",
+      "但是我們 4\n",
+      "我當市長 4\n",
+      "我們臺北 4\n",
+      "評審委員 4\n",
+      "2017 4\n",
+      "其實政治 4\n",
+      "改變台 4\n",
+      "的選舉 4\n",
+      "有一個 4\n",
+      "臺北市 4\n",
+      "是可以 4\n",
+      "我們的 4\n",
+      "全部都 4\n",
+      "委員會 4\n",
+      "我覺得 4\n",
+      "其實我 4\n",
+      "你知道 4\n",
+      "北燈節 4\n",
+      "開閉幕 4\n",
+      "創新是 4\n",
+      "的出路 4\n",
+      "最大的 4\n",
+      "的國際 4\n",
+      "照顧1 4\n",
+      "是一個 4\n",
+      "我們有 4\n",
+      "價格標 4\n",
+      "做生意 4\n",
+      "當市長 4\n",
+      "偉大的 4\n",
+      "社子島 4\n",
+      "朋友 4\n",
+      "登記 4\n",
+      "一直 4\n",
+      "我當 4\n",
+      "是政 4\n",
+      "覺得 4\n",
+      "當時 4\n",
+      "募款 4\n",
+      "在台 4\n",
+      "願意 4\n",
+      "們說 4\n",
+      "認為 4\n",
+      "有辦 4\n",
+      "路上 4\n",
+      "財務 4\n",
+      "監督 4\n",
+      "想法 4\n",
+      "句話 4\n",
+      "以後 4\n",
+      "說我 4\n",
+      "要創 4\n",
+      "全部 4\n",
+      "同意 4\n",
+      "精神 4\n",
+      "講一 4\n",
+      "我說 4\n",
+      "0個 4\n",
+      "麼多 4\n",
+      "喜歡 4\n",
+      "不到 4\n",
+      "執行 4\n",
+      "的去 4\n",
+      "6% 4\n",
+      "府外 4\n",
+      "之下 4\n",
+      "我要 4\n",
+      "招商 4\n",
+      "要跟 4\n",
+      "的政 4\n",
+      "也是 4\n",
+      "合作 4\n",
+      "太多 4\n",
+      "乾淨 4\n",
+      "溝通 4\n",
+      "實這 4\n",
+      "兩岸 4\n",
+      "大陸 4\n",
+      "交流 4\n",
+      "認識 4\n",
+      "簡單 4\n",
+      "每一 4\n",
+      "一邊 4\n",
+      "去年 4\n",
+      "下降 4\n",
+      "為政 4\n"
      ]
     }
    ],
    "source": [
-    "for w, cnt in swd[0:50]:\n",
+    "for w, cnt in swd:\n",
     "    if w not in stopwords:\n",
     "        print(w, cnt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 正規表達法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'my phone number is 0912345678'\n",
+    "'0912345678' in s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'my phone number is 0922333666'\n",
+    "'0912345678' in s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = '3'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='3'>"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.search('3', n )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = '5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "re.search('3', n )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='5'>"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [] => match any character within the []\n",
+    "re.search('[0123456789]', n )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='5'>"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# - : continue => [0123456789] => [0-9]\n",
+    "re.search('[0-9]', n )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='5'>"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \\d : digitis => \\d => [0-9]\n",
+    "re.search('\\d', n )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='w'>"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'w'\n",
+    "re.search('[abcdefghijklmnopqrstuvwxyz]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='w'>"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'w'\n",
+    "re.search('[a-z]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'W'\n",
+    "re.search('[a-z]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='W'>"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'W'\n",
+    "re.search('[a-zA-Z]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = '7'\n",
+    "re.search('[a-zA-Z]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='7'>"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = '7'\n",
+    "re.search('[a-zA-Z0-9]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='7'>"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \\w : words => [a-zA-Z0-9] => \\w\n",
+    "re.search('\\w', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = '&'\n",
+    "re.search('\\w', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='&'>"
+      ]
+     },
+     "execution_count": 277,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.search('[\\w&!@#$%^]', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='&'>"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# . : match any character => [\\w&!@#$%^] => .\n",
+    "re.search('.', s )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 1), match='i'>"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'iphone'\n",
+    "re.search('.', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# {n} : match exact n characters\n",
+    "re.search('.{6}', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# {m, n} : match at least m characters, at most n characters\n",
+    "re.search('.{3,6}', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# {m, } : match at least m characters\n",
+    "re.search('.{3,}', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# {0, } : match at least 0 characters\n",
+    "re.search('.{0,}', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  * => {0,}\n",
+    "re.search('.*', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# {1, } : match at least 1 character\n",
+    "re.search('.{1,}', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_sre.SRE_Match object; span=(0, 6), match='iphone'>"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  + => {1,}\n",
+    "re.search('.+', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 10), match='0912345678'>\n",
+      "<_sre.SRE_Match object; span=(0, 12), match='0912-345-678'>\n",
+      "<_sre.SRE_Match object; span=(0, 11), match='0912-345678'>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "phones = ['0912345678', '0912-345-678', '0912-345678', '09190380905805240809840928304820348023']\n",
+    "for p in phones:\n",
+    "    #print(re.search('09\\d{8}',p))\n",
+    "    #print(re.search('09\\d{2}-{0,1}\\d{3}-{0,1}\\d{3}',p))\n",
+    "    \n",
+    "    # ? => {0,1}\n",
+    "    #print(re.search('09\\d{2}-?\\d{3}-?\\d{3}',p))\n",
+    "    \n",
+    "    # ^: caret => match begin, $ => match end\n",
+    "    print(re.search('^09\\d{2}-?\\d{3}-?\\d{3}$',p))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = '^[A-Z]\\d{9}$'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = '''\n",
+    "\n",
+    "0919980602   楊過      小龍女\n",
+    "0911288478   白馬      白雪\n",
+    "0226785758   郭靖      黃蓉\n",
+    "0921643945   江小魚    蘇瑛\n",
+    "0928546485   連戰      連方瑀\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0919980602', '0911288478', '0921643945', '0928546485']"
+      ]
+     },
+     "execution_count": 308,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.findall('09\\d{8}', article)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "df = pandas.read_csv('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/rent_591_sample2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      高雄市湖內區民生街\n",
+       "1      新北市蘆洲區長安街\n",
+       "2    新北市永和區中山路一段\n",
+       "3      屏東縣潮州鎮六合路\n",
+       "4      桃園市觀音區四維路\n",
+       "Name: address, dtype: object"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['address'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning:\n",
+      "\n",
+      "currently extract(expand=None) means expand=False (return Index/Series/DataFrame) but in a future version of pandas this will be changed to expand=True (return DataFrame)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>高雄市</td>\n",
+       "      <td>湖內區</td>\n",
+       "      <td>民生街</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>新北市</td>\n",
+       "      <td>蘆洲區</td>\n",
+       "      <td>長安街</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>新北市</td>\n",
+       "      <td>永和區</td>\n",
+       "      <td>中山路</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>屏東縣</td>\n",
+       "      <td>潮州鎮</td>\n",
+       "      <td>六合路</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>桃園市</td>\n",
+       "      <td>觀音區</td>\n",
+       "      <td>四維路</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0    1    2\n",
+       "0  高雄市  湖內區  民生街\n",
+       "1  新北市  蘆洲區  長安街\n",
+       "2  新北市  永和區  中山路\n",
+       "3  屏東縣  潮州鎮  六合路\n",
+       "4  桃園市  觀音區  四維路"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['address'].str.extract('(.+[市縣])(.+[區鄉鎮市])(.+[街村路])').head()"
    ]
   },
   {
