--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -3431,6 +3431,466 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, abb, abc = ['a'], ['a', 'b', 'b'], ['a', 'b', 'c']\n",
+    "D = [a, abb, abc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "#tfidf('a', a, D)\n",
+    "tf  =  1/1\n",
+    "idf =  math.log(3/3)\n",
+    "tf * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tfidf('a', abb, D)\n",
+    "tf  =  1/3\n",
+    "idf =  math.log(3/3)\n",
+    "tf * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tfidf('a', abc, D)\n",
+    "tf  =  1/3\n",
+    "idf =  math.log(3/3)\n",
+    "tf * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27031007207210955"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tfidf('b', abb, D)\n",
+    "tf  =  2/3\n",
+    "idf =  math.log(3/2)\n",
+    "tf * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13515503603605478"
+      ]
+     },
+     "execution_count": 314,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tfidf('b', abc, D)\n",
+    "tf  =  1/3\n",
+    "idf =  math.log(3/2)\n",
+    "tf * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3662040962227032"
+      ]
+     },
+     "execution_count": 315,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tfidf('c', abc, D)\n",
+    "tf  =  1/3\n",
+    "idf =  math.log(3/1)\n",
+    "tf * idf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tfidf(t, d, D):\n",
+    "    tf  = d.count(t) / len(d)\n",
+    "    idf = math.log(len(D)/ len([doc for doc in D if t in doc]))\n",
+    "    return tf * idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3662040962227032"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf('c', abc, D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['候選人']"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jieba.analyse\n",
+    "s = '台北市長候選人吳蕚洋日前在辯論會大談蜂蜜檸檬好處'\n",
+    "tags = jieba.analyse.extract_tags(s, 1)\n",
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 詞頻矩陣"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict('userdict.txt')\n",
+    "ary = ['【更新】柯P：洪智坤洩漏公文案還沒看到公文　今處理',\n",
+    "       '留洪智坤 柯：殘障求職不易',\n",
+    "       '人事處議處洪智坤　柯P：不清楚議處結果']\n",
+    "\n",
+    "corpus = []\n",
+    "for title in ary:\n",
+    "    #print(' '.join(jieba.cut(title)))\n",
+    "    corpus.append(' '.join(jieba.cut(title)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<3x16 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 19 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['不易', '人事', '今處理', '公文', '更新', '柯p', '案還', '殘障', '求職', '洩漏', '洪智坤', '清楚', '看到', '結果', '處議', '議處']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1, 2, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.31738473, 0.63476946, 0.31738473,\n",
+       "        0.24137927, 0.31738473, 0.        , 0.        , 0.31738473,\n",
+       "        0.18745253, 0.        , 0.31738473, 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.54645401, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.54645401, 0.54645401, 0.        ,\n",
+       "        0.32274454, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.41074684, 0.        , 0.        , 0.        ,\n",
+       "        0.31238356, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.2425937 , 0.41074684, 0.        , 0.41074684, 0.41074684,\n",
+       "        0.41074684]])"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "a  = numpy.array([0,0,1,1,0])\n",
+    "b  = numpy.array([1,1,1,1,0])\n",
+    "numpy.sqrt(sum((a - b) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 曾崇拜韓國瑜的她想問：你是草包，還是看起來像草包？\n",
+    "# 九合一大選選戰激烈，其中國民黨高雄市長候選人韓國瑜所掀起的「韓流」引發熱議，網紅、資深社群操盤手「廣告小妹」也在臉書粉絲團承認自己曾經是韓粉，崇拜、欣賞過韓國瑜，但自從韓國瑜要選高雄市長後，她越來越不懂韓，「接連拋出天馬行空般的政見，卻沒有提出具體實行方向。」讓她忍不住想問「你是草包，還是看起來像草包？」\n",
+    "    # 韓國瑜   草包   國民黨 高雄市 候選人 韓流 九合一 選戰\n",
+    "#1      1      2      0     0     0    0    0     0\n",
+    "#2      1      2      1     1     1    1     1     1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict('userdict.txt')\n",
+    "ary = ['【更新】柯P：洪智坤洩漏公文案還沒看到公文　今處理',\n",
+    "       '留洪智坤 柯：殘障求職不易',\n",
+    "       '人事處議處洪智坤　柯P：不清楚議處結果']\n",
+    "\n",
+    "corpus = []\n",
+    "for title in ary:\n",
+    "    corpus.append(' '.join(jieba.cut(title)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.15075567, 0.22792115],\n",
+       "       [0.15075567, 1.        , 0.18898224],\n",
+       "       [0.22792115, 0.18898224, 1.        ]])"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity, cosine_distances\n",
+    "cs1 = cosine_similarity(X)\n",
+    "cs1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.84924433, 0.77207885],\n",
+       "       [0.84924433, 0.        , 0.81101776],\n",
+       "       [0.77207885, 0.81101776, 0.        ]])"
+      ]
+     },
+     "execution_count": 344,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs2 = cosine_distances(X)\n",
+    "cs2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
