--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -3891,6 +3891,238 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 產生相似度推薦引擎"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "appledf = pandas.read_excel('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/appledaily.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titles = []\n",
+    "corpus = []\n",
+    "for rec in appledf.iterrows():\n",
+    "    #print(rec)\n",
+    "    #break\n",
+    "    if not pandas.isnull(rec[1]['content']):\n",
+    "        titles.append(rec[1]['title'])\n",
+    "        corpus.append(' '.join(jieba.cut(rec[1]['content'])) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<147x12560 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 25639 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_distances\n",
+    "cs = cosine_distances(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'不滿柯文哲發言挺婦聯會\\u3000徐永明怒嗆：呷賽'"
+      ]
+     },
+     "execution_count": 356,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(147, 147)"
+      ]
+     },
+     "execution_count": 358,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0, 119, 137,  45,  33,  58, 127,  82,  73,  41])"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs[0].argsort()[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'婦聯會發言遭批討好藍選票\\u3000柯Ｐ：討好藍就失去綠'"
+      ]
+     },
+     "execution_count": 362,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles[119]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 0, 3, 1, 4])"
+      ]
+     },
+     "execution_count": 361,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = numpy.array([50,70,30,60,90])\n",
+    "a.argsort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不滿柯文哲發言挺婦聯會　徐永明怒嗆：呷賽 0.0\n",
+      "婦聯會發言遭批討好藍選票　柯Ｐ：討好藍就失去綠 0.6643878291143436\n",
+      "【最即時專題4】藍綠都有豬隊友！這些人發言讓候選人選情剉咧等 0.7452654567374166\n",
+      "姚文智批柯文哲比國民黨恐怖　「民進黨不用全黨譴責嗎？」 0.7466307277628033\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in cs[0].argsort()[0:10]:\n",
+    "    if cs[0][idx] < 0.75:\n",
+    "        print(titles[idx], cs[0][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSimiliarArticle(pos):\n",
+    "    print('查詢文章:', titles[pos])\n",
+    "    for idx in cs[pos].argsort()[1:10]:\n",
+    "        if cs[pos][idx] < 0.75:\n",
+    "            print('相關文章:',titles[idx], cs[pos][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "查詢文章: 張政源辭政次接台鐵局長　交長：盼以次長高度改革台鐵\n",
+      "相關文章: 【人物側寫】台鐵新局長張政源降職救火　「長官交辦使命必達」 0.5155942570149621\n",
+      "相關文章: 台鐵新局長張政源自願從政次降任　月薪少了近6萬 0.5721349070152812\n",
+      "相關文章: 台鐵「一個人的武林」　成大幫統治20年 0.6242546667308532\n",
+      "相關文章: 【普悠瑪事故】台鐵產工提6訴求　未獲回應爆衝突 0.7076373750445029\n"
+     ]
+    }
+   ],
+   "source": [
+    "getSimiliarArticle(20)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
